fixed bug related to the number of recipients and the number of messages in general